--- a/tools/PTPServerProc/Makefile.files
+++ b/tools/PTPServerProc/Makefile.files
@@ -31,63 +31,63 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/ErrorIds.o : ./ErrorIds.cpp
+.obj/ErrorIds.o : ././ErrorIds.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/HFSProc.o : ./HFSProc.cpp
+.obj/HFSProc.o : ././HFSProc.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/PTPConProc.o : ./PTPConProc.cpp
+.obj/PTPConProc.o : ././PTPConProc.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/ProcBase.o : ./ProcBase.cpp
+.obj/ProcBase.o : ././ProcBase.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/ServerProc.o : ./ServerProc.cpp
+.obj/ServerProc.o : ././ServerProc.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/SupportProc.o : ./SupportProc.cpp
+.obj/SupportProc.o : ././SupportProc.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/ErrorIds.s : ./ErrorIds.cpp
+.obj/ErrorIds.s : ././ErrorIds.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/HFSProc.s : ./HFSProc.cpp
+.obj/HFSProc.s : ././HFSProc.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/PTPConProc.s : ./PTPConProc.cpp
+.obj/PTPConProc.s : ././PTPConProc.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/ProcBase.s : ./ProcBase.cpp
+.obj/ProcBase.s : ././ProcBase.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/ServerProc.s : ./ServerProc.cpp
+.obj/ServerProc.s : ././ServerProc.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/SupportProc.s : ./SupportProc.cpp
+.obj/SupportProc.s : ././SupportProc.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/ErrorIds.dep : ./ErrorIds.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/ErrorIds.o $< -MF $@
+.obj/ErrorIds.dep : ././ErrorIds.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/ErrorIds.o $< -MF $@
 
-.obj/HFSProc.dep : ./HFSProc.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/HFSProc.o $< -MF $@
+.obj/HFSProc.dep : ././HFSProc.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/HFSProc.o $< -MF $@
 
-.obj/PTPConProc.dep : ./PTPConProc.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/PTPConProc.o $< -MF $@
+.obj/PTPConProc.dep : ././PTPConProc.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/PTPConProc.o $< -MF $@
 
-.obj/ProcBase.dep : ./ProcBase.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/ProcBase.o $< -MF $@
+.obj/ProcBase.dep : ././ProcBase.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/ProcBase.o $< -MF $@
 
-.obj/ServerProc.dep : ./ServerProc.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/ServerProc.o $< -MF $@
+.obj/ServerProc.dep : ././ServerProc.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/ServerProc.o $< -MF $@
 
-.obj/SupportProc.dep : ./SupportProc.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/SupportProc.o $< -MF $@
+.obj/SupportProc.dep : ././SupportProc.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/SupportProc.o $< -MF $@
 
 
 
