--- a/tools/CondLangLR1/Gen/Makefile.files
+++ b/tools/CondLangLR1/Gen/Makefile.files
@@ -16,18 +16,18 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-obj/main.o : ./main.cpp
+obj/main.o : ././main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-obj/main.s : ./main.cpp
+obj/main.s : ././main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-obj/main.dep : ./main.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/main.o $< -MF $@
+obj/main.dep : ././main.cpp
+	$(CC) $(CCOPT) -MM -MT obj/main.o $< -MF $@
 
 
 
