--- a/tools/EllipticPi/Makefile.files
+++ b/tools/EllipticPi/Makefile.files
@@ -19,27 +19,27 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/SimpleSpan.o : ./SimpleSpan.cpp
+.obj/SimpleSpan.o : ././SimpleSpan.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/main.o : ./main.cpp
+.obj/main.o : ././main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/SimpleSpan.s : ./SimpleSpan.cpp
+.obj/SimpleSpan.s : ././SimpleSpan.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/main.s : ./main.cpp
+.obj/main.s : ././main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/SimpleSpan.dep : ./SimpleSpan.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/SimpleSpan.o $< -MF $@
+.obj/SimpleSpan.dep : ././SimpleSpan.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/SimpleSpan.o $< -MF $@
 
-.obj/main.dep : ./main.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/main.o $< -MF $@
+.obj/main.dep : ././main.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
 
 
