--- a/tools/Regen/Makefile.files
+++ b/tools/Regen/Makefile.files
@@ -31,63 +31,63 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/Generate.o : ./Generate.cpp
+.obj/Generate.o : ././Generate.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/HashMap.o : ./HashMap.cpp
+.obj/HashMap.o : ././HashMap.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/Parser.o : ./Parser.cpp
+.obj/Parser.o : ././Parser.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/Token.o : ./Token.cpp
+.obj/Token.o : ././Token.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/main.o : ./main.cpp
+.obj/main.o : ././main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/test.o : ./test.cpp
+.obj/test.o : ././test.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/Generate.s : ./Generate.cpp
+.obj/Generate.s : ././Generate.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/HashMap.s : ./HashMap.cpp
+.obj/HashMap.s : ././HashMap.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/Parser.s : ./Parser.cpp
+.obj/Parser.s : ././Parser.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/Token.s : ./Token.cpp
+.obj/Token.s : ././Token.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/main.s : ./main.cpp
+.obj/main.s : ././main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/test.s : ./test.cpp
+.obj/test.s : ././test.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/Generate.dep : ./Generate.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Generate.o $< -MF $@
+.obj/Generate.dep : ././Generate.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Generate.o $< -MF $@
 
-.obj/HashMap.dep : ./HashMap.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/HashMap.o $< -MF $@
+.obj/HashMap.dep : ././HashMap.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/HashMap.o $< -MF $@
 
-.obj/Parser.dep : ./Parser.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Parser.o $< -MF $@
+.obj/Parser.dep : ././Parser.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Parser.o $< -MF $@
 
-.obj/Token.dep : ./Token.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Token.o $< -MF $@
+.obj/Token.dep : ././Token.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Token.o $< -MF $@
 
-.obj/main.dep : ./main.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/main.o $< -MF $@
+.obj/main.dep : ././main.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
-.obj/test.dep : ./test.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/test.o $< -MF $@
+.obj/test.dep : ././test.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/test.o $< -MF $@
 
 
 
