--- a/vtools/UserPreference/Makefile.files
+++ b/vtools/UserPreference/Makefile.files
@@ -22,36 +22,36 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/Application.o : ./src/Application.cpp
+.obj/Application.o : ././src/Application.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/TestFrame.o : ./src/TestFrame.cpp
+.obj/TestFrame.o : ././src/TestFrame.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/main.o : ./src/main.cpp
+.obj/main.o : ././src/main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/Application.s : ./src/Application.cpp
+.obj/Application.s : ././src/Application.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/TestFrame.s : ./src/TestFrame.cpp
+.obj/TestFrame.s : ././src/TestFrame.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/main.s : ./src/main.cpp
+.obj/main.s : ././src/main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/Application.dep : ./src/Application.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Application.o $< -MF $@
+.obj/Application.dep : ././src/Application.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Application.o $< -MF $@
 
-.obj/TestFrame.dep : ./src/TestFrame.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/TestFrame.o $< -MF $@
+.obj/TestFrame.dep : ././src/TestFrame.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/TestFrame.o $< -MF $@
 
-.obj/main.dep : ./src/main.cpp
-	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/main.o $< -MF $@
+.obj/main.dep : ././src/main.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
 
 
