--- a/Labs/Function/Makefile
+++ b/Labs/Function/Makefile
@@ -1,29 +1,28 @@
 # Makefile
 #----------------------------------------------------------------------------------------
 #
-#  Project: CondLangLR1-BFTest 1.00
+#  Project: Labs/Function
 #
 #  License: Boost Software License - Version 1.0 - August 17th, 2003 
 #
 #            see http://www.boost.org/LICENSE_1_0.txt or the local copy
 #
-#  Copyright (c) 2015 Sergey Strukov. All rights reserved.
+#  Copyright (c) 2017 Sergey Strukov. All rights reserved.
 #
 #----------------------------------------------------------------------------------------
 
-CCORE_ROOT = ../../..
+CCORE_ROOT = ../..
 
 include $(CCORE_ROOT)/Makefile.host
 
-TARGET = ./BFTest.exe
+TARGET = ./main.exe
 
 include $(CCORE_ROOT)/Target/Makefile.app
 
 .PHONY : run
 
 run: $(TARGET)
-	$(TARGET) ../AMP/AMP.ddl
-	$(TARGET) ../DDL/DDL.ddl
+	$(TARGET)
 
 
 
