--- a/tools/CondLangLR1/Main/Makefile.files
+++ b/tools/CondLangLR1/Main/Makefile.files
@@ -1,73 +1,73 @@
 OBJ_LIST = \
-obj/BottomLang.o \
-obj/CondLang.o \
-obj/ExtLang.o \
-obj/GoodEstimate.o \
-obj/LR1Estimate.o \
-obj/LR1Prop.o \
-obj/Lang.o \
-obj/LangDiagram.o \
-obj/LangEstimate.o \
-obj/LangParser.o \
-obj/LangStateMachine.o \
-obj/NonEmptyEstimate.o \
-obj/PrintTools.o \
-obj/Process.o \
-obj/Set.o \
-obj/SparseMatrix.o \
-obj/StateCompress.o \
-obj/StateMap.o \
-obj/Tools.o \
-obj/TopLang.o \
-obj/main.o \
+.obj/BottomLang.o \
+.obj/CondLang.o \
+.obj/ExtLang.o \
+.obj/GoodEstimate.o \
+.obj/LR1Estimate.o \
+.obj/LR1Prop.o \
+.obj/Lang.o \
+.obj/LangDiagram.o \
+.obj/LangEstimate.o \
+.obj/LangParser.o \
+.obj/LangStateMachine.o \
+.obj/NonEmptyEstimate.o \
+.obj/PrintTools.o \
+.obj/Process.o \
+.obj/Set.o \
+.obj/SparseMatrix.o \
+.obj/StateCompress.o \
+.obj/StateMap.o \
+.obj/Tools.o \
+.obj/TopLang.o \
+.obj/main.o \
 
 
 ASM_LIST = \
-obj/BottomLang.s \
-obj/CondLang.s \
-obj/ExtLang.s \
-obj/GoodEstimate.s \
-obj/LR1Estimate.s \
-obj/LR1Prop.s \
-obj/Lang.s \
-obj/LangDiagram.s \
-obj/LangEstimate.s \
-obj/LangParser.s \
-obj/LangStateMachine.s \
-obj/NonEmptyEstimate.s \
-obj/PrintTools.s \
-obj/Process.s \
-obj/Set.s \
-obj/SparseMatrix.s \
-obj/StateCompress.s \
-obj/StateMap.s \
-obj/Tools.s \
-obj/TopLang.s \
-obj/main.s \
+.obj/BottomLang.s \
+.obj/CondLang.s \
+.obj/ExtLang.s \
+.obj/GoodEstimate.s \
+.obj/LR1Estimate.s \
+.obj/LR1Prop.s \
+.obj/Lang.s \
+.obj/LangDiagram.s \
+.obj/LangEstimate.s \
+.obj/LangParser.s \
+.obj/LangStateMachine.s \
+.obj/NonEmptyEstimate.s \
+.obj/PrintTools.s \
+.obj/Process.s \
+.obj/Set.s \
+.obj/SparseMatrix.s \
+.obj/StateCompress.s \
+.obj/StateMap.s \
+.obj/Tools.s \
+.obj/TopLang.s \
+.obj/main.s \
 
 
 DEP_LIST = \
-obj/BottomLang.dep \
-obj/CondLang.dep \
-obj/ExtLang.dep \
-obj/GoodEstimate.dep \
-obj/LR1Estimate.dep \
-obj/LR1Prop.dep \
-obj/Lang.dep \
-obj/LangDiagram.dep \
-obj/LangEstimate.dep \
-obj/LangParser.dep \
-obj/LangStateMachine.dep \
-obj/NonEmptyEstimate.dep \
-obj/PrintTools.dep \
-obj/Process.dep \
-obj/Set.dep \
-obj/SparseMatrix.dep \
-obj/StateCompress.dep \
-obj/StateMap.dep \
-obj/Tools.dep \
-obj/TopLang.dep \
-obj/main.dep \
+.obj/BottomLang.dep \
+.obj/CondLang.dep \
+.obj/ExtLang.dep \
+.obj/GoodEstimate.dep \
+.obj/LR1Estimate.dep \
+.obj/LR1Prop.dep \
+.obj/Lang.dep \
+.obj/LangDiagram.dep \
+.obj/LangEstimate.dep \
+.obj/LangParser.dep \
+.obj/LangStateMachine.dep \
+.obj/NonEmptyEstimate.dep \
+.obj/PrintTools.dep \
+.obj/Process.dep \
+.obj/Set.dep \
+.obj/SparseMatrix.dep \
+.obj/StateCompress.dep \
+.obj/StateMap.dep \
+.obj/Tools.dep \
+.obj/TopLang.dep \
+.obj/main.dep \
 
 
 ASM_OBJ_LIST = \
@@ -76,198 +76,198 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-obj/BottomLang.o : ././lang/BottomLang.cpp
+.obj/BottomLang.o : ././lang/BottomLang.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/CondLang.o : ././lang/CondLang.cpp
+.obj/CondLang.o : ././lang/CondLang.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/ExtLang.o : ././lang/ExtLang.cpp
+.obj/ExtLang.o : ././lang/ExtLang.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/GoodEstimate.o : ././process/GoodEstimate.cpp
+.obj/GoodEstimate.o : ././process/GoodEstimate.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LR1Estimate.o : ././process/LR1Estimate.cpp
+.obj/LR1Estimate.o : ././process/LR1Estimate.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LR1Prop.o : ././process/LR1Prop.cpp
+.obj/LR1Prop.o : ././process/LR1Prop.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/Lang.o : ././lang/Lang.cpp
+.obj/Lang.o : ././lang/Lang.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LangDiagram.o : ././process/LangDiagram.cpp
+.obj/LangDiagram.o : ././process/LangDiagram.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LangEstimate.o : ././process/LangEstimate.cpp
+.obj/LangEstimate.o : ././process/LangEstimate.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LangParser.o : ././lang/LangParser.cpp
+.obj/LangParser.o : ././lang/LangParser.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/LangStateMachine.o : ././process/LangStateMachine.cpp
+.obj/LangStateMachine.o : ././process/LangStateMachine.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/NonEmptyEstimate.o : ././process/NonEmptyEstimate.cpp
+.obj/NonEmptyEstimate.o : ././process/NonEmptyEstimate.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/PrintTools.o : ././PrintTools.cpp
+.obj/PrintTools.o : ././PrintTools.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/Process.o : ././process/Process.cpp
+.obj/Process.o : ././process/Process.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/Set.o : ././Set.cpp
+.obj/Set.o : ././Set.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/SparseMatrix.o : ././SparseMatrix.cpp
+.obj/SparseMatrix.o : ././SparseMatrix.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/StateCompress.o : ././process/StateCompress.cpp
+.obj/StateCompress.o : ././process/StateCompress.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/StateMap.o : ././process/StateMap.cpp
+.obj/StateMap.o : ././process/StateMap.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/Tools.o : ././Tools.cpp
+.obj/Tools.o : ././Tools.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/TopLang.o : ././lang/TopLang.cpp
+.obj/TopLang.o : ././lang/TopLang.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-obj/main.o : ././main.cpp
+.obj/main.o : ././main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-obj/BottomLang.s : ././lang/BottomLang.cpp
+.obj/BottomLang.s : ././lang/BottomLang.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/CondLang.s : ././lang/CondLang.cpp
+.obj/CondLang.s : ././lang/CondLang.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/ExtLang.s : ././lang/ExtLang.cpp
+.obj/ExtLang.s : ././lang/ExtLang.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/GoodEstimate.s : ././process/GoodEstimate.cpp
+.obj/GoodEstimate.s : ././process/GoodEstimate.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LR1Estimate.s : ././process/LR1Estimate.cpp
+.obj/LR1Estimate.s : ././process/LR1Estimate.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LR1Prop.s : ././process/LR1Prop.cpp
+.obj/LR1Prop.s : ././process/LR1Prop.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/Lang.s : ././lang/Lang.cpp
+.obj/Lang.s : ././lang/Lang.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LangDiagram.s : ././process/LangDiagram.cpp
+.obj/LangDiagram.s : ././process/LangDiagram.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LangEstimate.s : ././process/LangEstimate.cpp
+.obj/LangEstimate.s : ././process/LangEstimate.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LangParser.s : ././lang/LangParser.cpp
+.obj/LangParser.s : ././lang/LangParser.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/LangStateMachine.s : ././process/LangStateMachine.cpp
+.obj/LangStateMachine.s : ././process/LangStateMachine.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/NonEmptyEstimate.s : ././process/NonEmptyEstimate.cpp
+.obj/NonEmptyEstimate.s : ././process/NonEmptyEstimate.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/PrintTools.s : ././PrintTools.cpp
+.obj/PrintTools.s : ././PrintTools.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/Process.s : ././process/Process.cpp
+.obj/Process.s : ././process/Process.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/Set.s : ././Set.cpp
+.obj/Set.s : ././Set.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/SparseMatrix.s : ././SparseMatrix.cpp
+.obj/SparseMatrix.s : ././SparseMatrix.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/StateCompress.s : ././process/StateCompress.cpp
+.obj/StateCompress.s : ././process/StateCompress.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/StateMap.s : ././process/StateMap.cpp
+.obj/StateMap.s : ././process/StateMap.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/Tools.s : ././Tools.cpp
+.obj/Tools.s : ././Tools.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/TopLang.s : ././lang/TopLang.cpp
+.obj/TopLang.s : ././lang/TopLang.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-obj/main.s : ././main.cpp
+.obj/main.s : ././main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-obj/BottomLang.dep : ././lang/BottomLang.cpp
-	$(CC) $(CCOPT) -MM -MT obj/BottomLang.o $< -MF $@
+.obj/BottomLang.dep : ././lang/BottomLang.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/BottomLang.o $< -MF $@
 
-obj/CondLang.dep : ././lang/CondLang.cpp
-	$(CC) $(CCOPT) -MM -MT obj/CondLang.o $< -MF $@
+.obj/CondLang.dep : ././lang/CondLang.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/CondLang.o $< -MF $@
 
-obj/ExtLang.dep : ././lang/ExtLang.cpp
-	$(CC) $(CCOPT) -MM -MT obj/ExtLang.o $< -MF $@
+.obj/ExtLang.dep : ././lang/ExtLang.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/ExtLang.o $< -MF $@
 
-obj/GoodEstimate.dep : ././process/GoodEstimate.cpp
-	$(CC) $(CCOPT) -MM -MT obj/GoodEstimate.o $< -MF $@
+.obj/GoodEstimate.dep : ././process/GoodEstimate.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/GoodEstimate.o $< -MF $@
 
-obj/LR1Estimate.dep : ././process/LR1Estimate.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LR1Estimate.o $< -MF $@
+.obj/LR1Estimate.dep : ././process/LR1Estimate.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LR1Estimate.o $< -MF $@
 
-obj/LR1Prop.dep : ././process/LR1Prop.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LR1Prop.o $< -MF $@
+.obj/LR1Prop.dep : ././process/LR1Prop.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LR1Prop.o $< -MF $@
 
-obj/Lang.dep : ././lang/Lang.cpp
-	$(CC) $(CCOPT) -MM -MT obj/Lang.o $< -MF $@
+.obj/Lang.dep : ././lang/Lang.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Lang.o $< -MF $@
 
-obj/LangDiagram.dep : ././process/LangDiagram.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LangDiagram.o $< -MF $@
+.obj/LangDiagram.dep : ././process/LangDiagram.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LangDiagram.o $< -MF $@
 
-obj/LangEstimate.dep : ././process/LangEstimate.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LangEstimate.o $< -MF $@
+.obj/LangEstimate.dep : ././process/LangEstimate.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LangEstimate.o $< -MF $@
 
-obj/LangParser.dep : ././lang/LangParser.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LangParser.o $< -MF $@
+.obj/LangParser.dep : ././lang/LangParser.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LangParser.o $< -MF $@
 
-obj/LangStateMachine.dep : ././process/LangStateMachine.cpp
-	$(CC) $(CCOPT) -MM -MT obj/LangStateMachine.o $< -MF $@
+.obj/LangStateMachine.dep : ././process/LangStateMachine.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/LangStateMachine.o $< -MF $@
 
-obj/NonEmptyEstimate.dep : ././process/NonEmptyEstimate.cpp
-	$(CC) $(CCOPT) -MM -MT obj/NonEmptyEstimate.o $< -MF $@
+.obj/NonEmptyEstimate.dep : ././process/NonEmptyEstimate.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/NonEmptyEstimate.o $< -MF $@
 
-obj/PrintTools.dep : ././PrintTools.cpp
-	$(CC) $(CCOPT) -MM -MT obj/PrintTools.o $< -MF $@
+.obj/PrintTools.dep : ././PrintTools.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/PrintTools.o $< -MF $@
 
-obj/Process.dep : ././process/Process.cpp
-	$(CC) $(CCOPT) -MM -MT obj/Process.o $< -MF $@
+.obj/Process.dep : ././process/Process.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Process.o $< -MF $@
 
-obj/Set.dep : ././Set.cpp
-	$(CC) $(CCOPT) -MM -MT obj/Set.o $< -MF $@
+.obj/Set.dep : ././Set.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Set.o $< -MF $@
 
-obj/SparseMatrix.dep : ././SparseMatrix.cpp
-	$(CC) $(CCOPT) -MM -MT obj/SparseMatrix.o $< -MF $@
+.obj/SparseMatrix.dep : ././SparseMatrix.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/SparseMatrix.o $< -MF $@
 
-obj/StateCompress.dep : ././process/StateCompress.cpp
-	$(CC) $(CCOPT) -MM -MT obj/StateCompress.o $< -MF $@
+.obj/StateCompress.dep : ././process/StateCompress.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/StateCompress.o $< -MF $@
 
-obj/StateMap.dep : ././process/StateMap.cpp
-	$(CC) $(CCOPT) -MM -MT obj/StateMap.o $< -MF $@
+.obj/StateMap.dep : ././process/StateMap.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/StateMap.o $< -MF $@
 
-obj/Tools.dep : ././Tools.cpp
-	$(CC) $(CCOPT) -MM -MT obj/Tools.o $< -MF $@
+.obj/Tools.dep : ././Tools.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Tools.o $< -MF $@
 
-obj/TopLang.dep : ././lang/TopLang.cpp
-	$(CC) $(CCOPT) -MM -MT obj/TopLang.o $< -MF $@
+.obj/TopLang.dep : ././lang/TopLang.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/TopLang.o $< -MF $@
 
-obj/main.dep : ././main.cpp
-	$(CC) $(CCOPT) -MM -MT obj/main.o $< -MF $@
+.obj/main.dep : ././main.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
 
 
