--- a/vtools/RandomId/Makefile.files
+++ b/vtools/RandomId/Makefile.files
@@ -25,44 +25,44 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/Application.o : ././src/Application.cpp
+.obj/Application.o : src/./Application.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/Client.o : ././src/Client.cpp
+.obj/Client.o : src/./Client.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/RandomId.o : ././src/RandomId.cpp
+.obj/RandomId.o : src/./RandomId.cpp
 	$(CC) $(CCOPT) $< -o $@
 
-.obj/main.o : ././src/main.cpp
+.obj/main.o : src/./main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/Application.s : ././src/Application.cpp
+.obj/Application.s : src/./Application.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/Client.s : ././src/Client.cpp
+.obj/Client.s : src/./Client.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/RandomId.s : ././src/RandomId.cpp
+.obj/RandomId.s : src/./RandomId.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
-.obj/main.s : ././src/main.cpp
+.obj/main.s : src/./main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/Application.dep : ././src/Application.cpp
+.obj/Application.dep : src/./Application.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Application.o $< -MF $@
 
-.obj/Client.dep : ././src/Client.cpp
+.obj/Client.dep : src/./Client.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Client.o $< -MF $@
 
-.obj/RandomId.dep : ././src/RandomId.cpp
+.obj/RandomId.dep : src/./RandomId.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/RandomId.o $< -MF $@
 
-.obj/main.dep : ././src/main.cpp
+.obj/main.dep : src/./main.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
 
