--- a/Makefile.host
+++ b/Makefile.host
@@ -11,6 +11,6 @@
 #
 #----------------------------------------------------------------------------------------
 
-CCORE_TARGET = WIN32utf8
+CCORE_TARGET = WIN32
 
 
