--- a/vtools/BookLab/Makefile.files
+++ b/vtools/BookLab/Makefile.files
@@ -4,6 +4,7 @@ OBJ_LIST = \
 .obj/BookWindow.o \
 .obj/Client.o \
 .obj/Sample.o \
+.obj/WorkWindow.o \
 .obj/main.o \
 
 
@@ -13,6 +14,7 @@ ASM_LIST = \
 .obj/BookWindow.s \
 .obj/Client.s \
 .obj/Sample.s \
+.obj/WorkWindow.s \
 .obj/main.s \
 
 
@@ -22,6 +24,7 @@ DEP_LIST = \
 .obj/BookWindow.dep \
 .obj/Client.dep \
 .obj/Sample.dep \
+.obj/WorkWindow.dep \
 .obj/main.dep \
 
 
@@ -46,6 +49,9 @@ include $(RULES_FILE)
 .obj/Sample.o : src/./Sample.cpp
 	$(CC) $(CCOPT) $< -o $@
 
+.obj/WorkWindow.o : src/./WorkWindow.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 .obj/main.o : src/./main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
@@ -64,6 +70,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/Sample.s : src/./Sample.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/WorkWindow.s : src/./WorkWindow.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/main.s : src/./main.cpp
@@ -85,6 +94,9 @@ include $(RULES_FILE)
 
 .obj/Sample.dep : src/./Sample.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Sample.o $< -MF $@
+
+.obj/WorkWindow.dep : src/./WorkWindow.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/WorkWindow.o $< -MF $@
 
 .obj/main.dep : src/./main.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
