--- a/vtools/BookLab/Makefile
+++ b/vtools/BookLab/Makefile
@@ -33,5 +33,5 @@ run: $(TARGET)
 TypeSet = $(HOME)/bin/CCore-DDLTypeSet.exe
 
 inc/Book.TypeDef.gen.h : docs/Book.ddl
-	$(TypeSet) docs/Book.ddl inc/Book.TypeDef.gen.h src/Book.TypeSet.gen.h Font
+	$(TypeSet) docs/Book.ddl inc/Book.TypeDef.gen.h src/Book.TypeSet.gen.h Font Bitmap
 
