--- a/vtools/BookLab/Convertor/Makefile.files
+++ b/vtools/BookLab/Convertor/Makefile.files
@@ -1,12 +1,21 @@
 OBJ_LIST = \
+.obj/AnyObjectPtr.o \
+.obj/Convert.o \
+.obj/Source.o \
 .obj/main.o \
 
 
 ASM_LIST = \
+.obj/AnyObjectPtr.s \
+.obj/Convert.s \
+.obj/Source.s \
 .obj/main.s \
 
 
 DEP_LIST = \
+.obj/AnyObjectPtr.dep \
+.obj/Convert.dep \
+.obj/Source.dep \
 .obj/main.dep \
 
 
@@ -16,17 +25,44 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
-.obj/main.o : ././main.cpp
+.obj/AnyObjectPtr.o : src/./AnyObjectPtr.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/Convert.o : src/./Convert.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/Source.o : src/./Source.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/main.o : src/./main.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 
 
-.obj/main.s : ././main.cpp
+.obj/AnyObjectPtr.s : src/./AnyObjectPtr.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/Convert.s : src/./Convert.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/Source.s : src/./Source.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/main.s : src/./main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
 
-.obj/main.dep : ././main.cpp
+.obj/AnyObjectPtr.dep : src/./AnyObjectPtr.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/AnyObjectPtr.o $< -MF $@
+
+.obj/Convert.dep : src/./Convert.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Convert.o $< -MF $@
+
+.obj/Source.dep : src/./Source.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/Source.o $< -MF $@
+
+.obj/main.dep : src/./main.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/main.o $< -MF $@
 
 
