--- a/vtools/Aspect/Makefile.files
+++ b/vtools/Aspect/Makefile.files
@@ -1,4 +1,5 @@
 OBJ_LIST = \
+.obj/App.o \
 .obj/AppState.o \
 .obj/Application.o \
 .obj/Aspect.o \
@@ -9,6 +10,7 @@ OBJ_LIST = \
 
 
 ASM_LIST = \
+.obj/App.s \
 .obj/AppState.s \
 .obj/Application.s \
 .obj/Aspect.s \
@@ -19,6 +21,7 @@ ASM_LIST = \
 
 
 DEP_LIST = \
+.obj/App.dep \
 .obj/AppState.dep \
 .obj/Application.dep \
 .obj/Aspect.dep \
@@ -33,6 +36,9 @@ ASM_OBJ_LIST = \
 
 include $(RULES_FILE)
 
+
+.obj/App.o : src/./App.cpp
+	$(CC) $(CCOPT) $< -o $@
 
 .obj/AppState.o : src/./AppState.cpp
 	$(CC) $(CCOPT) $< -o $@
@@ -57,6 +63,9 @@ include $(RULES_FILE)
 
 
 
+.obj/App.s : src/./App.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 .obj/AppState.s : src/./AppState.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -79,6 +88,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 
+
+.obj/App.dep : src/./App.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/App.o $< -MF $@
 
 .obj/AppState.dep : src/./AppState.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/AppState.o $< -MF $@
